# hibiki-bootstrap

./: CMakeLists.txt  README.md  build.bat  dll_proxy_gen.c  dllmain.c  main.c
cmake/: toolchain-mingw64.cmake
